--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <body>
-    <a href="https://hollandryugaku.com/">オランダ留学.com</a>
-    <a href="https://marshmallow-qa.com/yudainakazaki">質問</a>
+    <ul>
+      <li><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></li>
+      <li><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a></li>
+    </ul>
   </body>
 </html>
