--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <body>
-    <ul>
-      <li><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></li>
-      <li><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a></li>
-    </ul>
+    <p><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></p>
+    <p><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a></p>
   </body>
 </html>
