--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <body>
-    <p><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></p>
-    <p><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a></p>
+    <p>
+      <a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a>
+    </p>
+    <p>
+      <a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a>
+    </p>
   </body>
 </html>
