--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <body>
-      <a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a>
-      <p> ・ </p>
-      <a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a>
+      <h2><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></h2>
+      <h2> ・ </h2>
+      <h2><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a></h2>
   </body>
 </html>
