--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ja" dir="ltr">
   <body>
       <h2><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></h2>
       <h2> ・ </h2>
