--- a/index.html
+++ b/index.html
@@ -1,143 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-  <head>
-    <meta charset="utf-8">
-    <title>Yudai Nakazaki's CV page</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/copy.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Open+Sans+Condensed:wght@300;700&display=swap" rel="stylesheet">
-  </head>
-
   <body>
-    <a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a>
-    <a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a>
-    <header>Welcome to Yudai's CV page <a href="https://www.youtube.com/watch?v=v7BY5m2wYx4" target="_blank">🐤</a></header>
-    <div class="bottom-container">
-      <div class="dev_logo">
-        <a class="footer-link" href="https://www.linkedin.com/in/yudai-nakazaki-013154197/" target="_blank"><img class="logo" src="img/linkedin.png" alt="linkedin-logo"></a>
-        <a class="footer-link" href="https://www.facebook.com/profile.php?id=100009679770903" target="_blank"><img class="logo" src="img/facebook.png" alt="facebook-logo"></a>
-        <a class="footer-link" href="https://www.wantedly.com/id/yudai_nakazaki" target="_blank"><img class="logo" src="img/wantedly.png" alt="wantedly-logo"></a>
-        <a class="footer-link" href="https://twitter.com/yudainakazaki" target="_blank"><img class="logo" src="img/twitter.png" alt="twitter-logo"></a>
-        <a class="footer-link" href="https://note.com/yudainakazaki" target="_blank"><img class="logo" src="img/note.png" alt="note-logo"></a>
-        <a class="footer-link" href="https://www.instagram.com/im_rarely_john/" target="_blank"><img class="logo" src="img/instagram.png" alt="instagram_logo"></a>
-        <a class="footer-link" href="https://github.com/yudainakazaki" target="_blank"><img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYpGs6WHzwI-PDxpL9VRsDEb0YWcq8mSPnI9C2rpAPovNiDz04tyVkh5WzFq4IMpqhCN4&usqp=CAU" alt="github-logo"></a>
-        <a class="footer-link" href="https://hollandryugaku.com/" target="_blank"><img class="logo" src="img/ran.jpg" alt="hollandryugaku_logo"></a>
-        <a class="footer-link" href="johnmajestic/index.html" target="_blank"><img class="logo" src="img/jm_.jpg" alt="johnmajestic_logo"></a>
-        <a class="footer-link" href="https://atcoder.jp/users/udainakazaki" target="_blank"><img class="logo" src="img/atcoder.png" alt="atcoder_logo"></a>
-      </div>
-    </div>
-    
-    <div class="profile">
-      <img class="profile-img" src="img/circle-cropped.png" alt="profile-pic">
-    </div>
-    
-    <div class="middle-container">
-      <div class="intro">
-        <h2>Who am I?</h2>
-        <ul>
-          <li>I am Yudai Nakazaki, from Tokyo, Japan. </li>
-          <li>I study Computer Science as my second bachelor's degree at VU Amsterdam in the Netherlands.</li>
-          <li>I am especially interested in Human Computer Interaction.</li>
-          <li>As I graduate, I would like to start my career as a UX Engineer to be involved in product development projects.</li>
-        </ul>
-      </div>
-      <div class="cv">
-        <p class="cv_text"><a href="https://sway.office.com/ApHVeEZkaYMDcMP3?ref=Link" target="_blank">my cv 📝</a></p>
-        <iframe src="https://sway.office.com/s/ApHVeEZkaYMDcMP3/embed" frameborder="0" marginheight="0" marginwidth="0" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none;" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
-      </div>
-      <hr>
-      <div class="job-experience">
-        <h2>Job Experience</h2>
-        <h3>■ <a href="https://www.hr-force.co.jp/" target="_blank">HR Force Inc.</a> - Tokyo, Japan</h3>
-        <p>[Term] Feb. 2020 - Aug. 2020, Apr. 2021 - Jul. 2021</p>
-        <p>I had been involved in the following projects:</p>
-        <ul>
-          <li>Management and Configuration of CRM on Salesforce</li>
-          <li>Creating dashboards to analyze the performance level of the Customer Success Team</li>
-          <li>Retrieving data from World Wide Web for Business Development</li> 
-          <li>Analytics on the relationship between specific Japanese words and CVR on the job openings on the owned media, and the configuration of the operation</li> 
-        </ul>  
-        <h4>【Python】</h4>
-        <p>
-            Pandas | Numpy | Matplotlib | BS4 | Selenium | Mecab | word2vec | Colaboratory<br>
-        </p>
-        <h4>【Salesforce Administration】</h4>
-        <p>
-            RANGER | Lightning Experience Reports & Dashboards Specialist<br>
-        </p>
-        <p>👉  <a class="ref_url" href="https://trailblazer.me/id/welcome16989" target="_blank">Trailhead</a></p>
-        <h4>【Other】</h4>
-        <p>
-            Spreadsheet | GAS | BigQuery<br>
-        </p>
-      </div>
-      <hr>
-      <div class="education">
-        <h2>Education</h2>
-        <h3>■ <a href="https://www.vu.nl/en/" target="_blank">VU Amsterdam</a> - Amsterdam, the Netherlands</h3>
-        <p>I am pursuing a bachelor's degree in Computer Science 💻</p>
-        <p>👉  <a class="ref_url" href="Grades.pdf" target="_blank">My transcript</a></p>
-        <br>
-        <h3>■ <a href="https://www.keio.ac.jp/ja/" target="_blank">Keio University</a> - Tokyo, Japan</h3>
-        <p>I got a bachelor's degree in Economics in 2019 🎓 <br>I especially focused on the study of micro economics, and I studied Applied Economics in the study group of <a href="https://k-ris.keio.ac.jp/html/100001061_en.html" target="_blank">Prof. Takanobu Nakajima</a>.</p>
-      </div>
-      <hr>
-      <div class="skills">
-        <h2>My Skills</h2>
-        <div class="skill-row">
-          <h3>■ Programming Language</h3>
-          <p>Python | C++ | JavaScript | HTML | CSS</p>
-        </div>
-        <div class="skill-row">
-          <h3>■ Computer Science</h3>
-          <p>I have studied the concept of Computer Science; Data Structures, Computer Programming, Network and Web Technologies like HTTP methods, AJAX, jQuery and API.</p>
-        </div>
-        <div class="skill-row">
-          <h3>■ Language</h3>
-          <p>I am a native speaker of Japanese and an English speaker as well.</p>
-        </div>
-      </div>
-      <hr>
-      <div class="hobbies">
-        <h2>My Hobbies</h2>
-        <div class="skill-row">
-          <h3>■ Music</h3>
-          <p>I like listening to, playing and creating music!</p>
-          <p>I usually make songs on my PC with a small MIDI keyboard 🎹</p>
-        </div>
-        <div class="skill-row">
-          <h3>■ Swimming</h3>
-          <p>I like swimming over any other sports. I often swim in <a href="https://www.google.com/search?sxsrf=AOaemvL5CUOfjzfsLA91BkraVk53uzlyQA:1631444971099&q=nieuwe+meer&spell=1&sa=X&ved=2ahUKEwiIsOOPpvnyAhWkNOwKHRbWDuMQBSgAegQIAhAx&cshid=1631445118158139&biw=1366&bih=913" target="_blank">Nieuwe Meer</a>.</p>
-        </div>
-        <div class="skill-row">
-          <h3>■ Finance</h3>
-          <p>I study finance to build assets. I invest in stocks and index funds, besides studying computer science at school. I am really interested in making money.</p>
-        </div>
-      </div>
-      <hr>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <p>If you are interested, please reach out to me from social media or Email below! I am looking for a student job in Amsterdam.</br></p>
-        <p class="email">📮: <a href = "mailto:udainakazaki@gmail.com" target="_blank">udainakazaki@gmail.com</a></p>
-      </div>
-    </div>
-
-    <div class="bottom-container">
-      <div class="dev_logo_btm">
-        <a class="footer-link" href="https://www.linkedin.com/in/yudai-nakazaki-013154197/" target="_blank"><img class="logo" src="img/linkedin.png" alt="linkedin-logo"></a>
-        <a class="footer-link" href="https://www.facebook.com/profile.php?id=100009679770903" target="_blank"><img class="logo" src="img/facebook.png" alt="facebook-logo"></a>
-        <a class="footer-link" href="https://www.wantedly.com/id/yudai_nakazaki" target="_blank"><img class="logo" src="img/wantedly.png" alt="wantedly-logo"></a>
-        <a class="footer-link" href="https://twitter.com/yudainakazaki" target="_blank"><img class="logo" src="img/twitter.png" alt="twitter-logo"></a>
-        <a class="footer-link" href="https://note.com/yudainakazaki" target="_blank"><img class="logo" src="img/note.png" alt="note-logo"></a>
-        <a class="footer-link" href="https://www.instagram.com/im_rarely_john/" target="_blank"><img class="logo" src="img/instagram.png" alt="instagram_logo"></a>
-        <a class="footer-link" href="https://github.com/yudainakazaki" target="_blank"><img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYpGs6WHzwI-PDxpL9VRsDEb0YWcq8mSPnI9C2rpAPovNiDz04tyVkh5WzFq4IMpqhCN4&usqp=CAU" alt="github-logo"></a>
-        <a class="footer-link" href="https://hollandryugaku.com/" target="_blank"><img class="logo" src="img/ran.jpg" alt="hollandryugaku_logo"></a>
-        <a class="footer-link" href="johnmajestic/index.html" target="_blank"><img class="logo" src="img/jm_.jpg" alt="johnmajestic_logo"></a>
-        <a class="footer-link" href="https://atcoder.jp/users/udainakazaki" target="_blank"><img class="logo" src="img/atcoder.png" alt="atcoder_logo"></a>
-      </div>
-      <p class="copy-right">© 2021 Yudai Nakazaki<a href="https://www.youtube.com/watch?v=6HTloo5dW00" target="_blank">.</a></p>
-    </div>
-
+    <h2><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></h2>
+    <h2><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a></h2>
   </body>
 </html>
