--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <body>
     <h2><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></h2>
     <h2><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a></h2>
