--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ja" dir="ltr">
 
   <body>
     
@@ -21,8 +21,8 @@
       <div class="job-experience">
         <h2>Job Experience</h2>
         <h3>■ <a href="https://www.hr-force.co.jp/" target="_blank">HR Force Inc.</a> - Tokyo, Japan</h3>
-        <h2><a href="https://hollandryugaku.com/" target="_blank>オランダ留学.com</a></h2>
-        <h2><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank>質問</a></h2>
+        <h2><a href="https://hollandryugaku.com/" target="_blank">オランダ留学.com</a></h2>
+        <h2><a href="https://marshmallow-qa.com/yudainakazaki" target="_blank">質問</a></h2>
         <p>[Term] Feb. 2020 - Aug. 2020, Apr. 2021 - Jul. 2021</p>
         <p>I had been involved in the following projects:</p>
         <ul>
