--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja" dir="ltr">
   <body>
       <div class="job-experience">
+        <h3>■ <a href="https://yudainakazaki.github.io/cv/" target="_blank">Yudai NakazakiのCVページ</a></h3>
         <h3>■ <a href="https://hollandryugaku.com/" target="_blank">オランダ留学.com</a></h3>
         <h3>■ <a href="https://marshmallow-qa.com/yudainakazaki" target="_blank">質問</a></h3>
       </div>
